log
Thu Mar 17 12:25:11 HSP 2022: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
16b56d9
Thu Mar 17 12:26:43 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
fb2683d
Thu Mar 17 12:39:27 HSP 2022: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     sgte=list->current->next;
         ^
list.c:49:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return sgte;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4603ae9
Thu Mar 17 12:40:06 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:10: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     *sgte=list->current->next;
          ^
list.c:49:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return *sgte;
            ^~~~~
list.c:47:10: error: 'sgte' is used uninitialized in this function [-Werror=uninitialized]
     *sgte=list->current->next;
     ~~~~~^~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
040a285
Thu Mar 17 12:41:18 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
de5a2b6
Thu Mar 17 12:46:11 HSP 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4534b28
Thu Mar 17 12:51:24 HSP 2022: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|5
total_score: 15/70
79c571c
Thu Mar 17 12:53:06 HSP 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:51:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     dato=list->current->next->data;
         ^
list.c:53:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return dato;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d906b40
Thu Mar 17 12:53:35 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c5b8a44
Thu Mar 17 12:53:57 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:51:10: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     *dato=list->current->next->data;
          ^
list.c:53:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return *dato;
            ^~~~~
list.c:51:10: error: 'dato' is used uninitialized in this function [-Werror=uninitialized]
     *dato=list->current->next->data;
     ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a7df584
Thu Mar 17 12:56:27 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:51:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     dato=list->current->next->data;
         ^
list.c:53:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return dato;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8a3883a
Thu Mar 17 12:57:10 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:51:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     dato=&list->current->next->data;
         ^
list.c:53:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return dato;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e319e90
Thu Mar 17 12:57:25 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:51:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     dato=list->current->next->data;
         ^
list.c:53:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return dato;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
85bb085
Thu Mar 17 13:14:48 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:51:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     dato=list->current->next->data;
         ^
list.c:53:12: error: function returns address of local variable [-Werror=return-local-addr]
     return &dato;
            ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9925e0f
Thu Mar 17 13:19:43 HSP 2022: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
3e12583
Thu Mar 17 13:22:35 HSP 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:51:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     dato=list->current->data;
         ^
list.c:53:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return dato;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3ce56b6
Thu Mar 17 13:23:37 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
fb7c712
Thu Mar 17 13:24:44 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4b2c932
Thu Mar 17 13:25:35 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:51:9: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     dato=list->current->next;
         ^
cc1.exe: all warnings being treated as errors
Compilation failed
5c784c7
Thu Mar 17 13:26:01 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:51:10: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     *dato=list->current->next;
          ^
list.c:51:10: error: 'dato' is used uninitialized in this function [-Werror=uninitialized]
     *dato=list->current->next;
     ~~~~~^~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c72e92a
Thu Mar 17 13:26:35 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2f985e7
Thu Mar 17 13:28:32 HSP 2022: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
cc4dc3d
Thu Mar 17 13:29:35 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bb3c68c
Thu Mar 17 13:32:08 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fc23a00
Thu Mar 17 13:32:47 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
24bbdcf
Thu Mar 17 13:34:34 HSP 2022: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|0
c3eea29
Thu Mar 17 13:36:09 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a0a6d39
Thu Mar 17 13:36:40 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
10aa945
Thu Mar 17 14:00:18 HSP 2022: 
 list.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  0|0
ed316bb
Thu Mar 17 14:01:33 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f5547c6
Thu Mar 17 14:01:48 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3f7dc95
Thu Mar 17 14:04:11 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0f8fc38
Thu Mar 17 14:05:03 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6ddba66
Thu Mar 17 14:08:01 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5163757
Thu Mar 17 14:53:54 HSP 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|5
total_score: 15/70
95297e2
Thu Mar 17 15:30:25 HSP 2022: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
3179daf
Thu Mar 17 15:48:26 HSP 2022: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
1053db9
Thu Mar 17 15:49:56 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
81fd327
Thu Mar 17 15:50:46 HSP 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|5
total_score: 15/70
8fd5604
Thu Mar 17 15:52:12 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
067b282
Thu Mar 17 15:55:08 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
48f29bb
Fri Mar 18 11:19:22 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1cac3aa
